--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,7 +3,8 @@ FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim
 
 ENV BINDING="0.0.0.0" \
     BUNDLE_PATH="/usr/local/bundle" \
-    GEM_HOME="/usr/local/bundle"
+    GEM_HOME="/usr/local/bundle" \
+    RAILS_ENV="development"
 
 RUN gem update --system && gem cleanup
 
