--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.4",
     "@stimulus-components/carousel": "^6.0.0",
+    "@stimulus-components/scroll-to": "^5.0.1",
     "autoprefixer": "^10.4.18",
     "chokidar": "^3.6.0",
     "esbuild": "^0.20.2",
     "esbuild-rails": "^1.0.7",
     "postcss": "^8.4.37",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-stimulus-components": "^5.1.1"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build": "node esbuild.config.mjs",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   }
 }
